--- a/LupsyApp/app/src/main/res/layout/item_lista_cerveja.xml
+++ b/LupsyApp/app/src/main/res/layout/item_lista_cerveja.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imgCapa"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="100dp"
         android:layout_weight="0.3"
         app:srcCompat="@drawable/imgspacer" />
 
@@ -80,4 +80,5 @@
 
 
     </LinearLayout>
+
 </LinearLayout>
