--- a/LupsyApp/app/src/main/res/values/colors.xml
+++ b/LupsyApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="fundo_amarelo_seco">#39DBD5BE</color>
     <color name="cadastro">#D4D4D4</color>
     <color name="branco_sujo">#E1E1E1</color>
+    <color name="grey">#45D9D9D9</color>
 </resources>
