--- a/LupsyApp/app/src/main/res/layout/activity_cerveja_details.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_cerveja_details.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/fundo_amarelo_seco"
     android:orientation="vertical"
     tools:context=".CervejaDetailsActivity">
 
@@ -69,103 +69,232 @@
                 android:textSize="20sp"
                 tools:ignore="VisualLintTextFieldSize" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2"
-            android:padding="8dp">
-
-            <!-- Container for Teor Alcool -->
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_weight="1"
-                app:cardCornerRadius="36dp"
-                app:cardElevation="0dp"
-                app:cardBackgroundColor="@color/grey">
+                android:orientation="horizontal"
+                android:weightSum="2">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:orientation="vertical"
-                    android:padding="20dp">
+                <!-- Container for Teor Alcool -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/teor_alcool"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/grey"
+                    app:cardCornerRadius="36dp"
+                    app:cardElevation="0dp">
 
-                    <TextView
-                        android:id="@+id/tv_teor_alcool"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:orientation="vertical"
+                        android:padding="10dp">
+
+                        <TextView
+                            android:id="@+id/tv_teor_alcool"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="@string/teor_alcool"
+                            android:textColor="@color/preto_fosco"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:translationX="5dp" />
+
+                        <TextView
+                            android:id="@+id/tvTeorAlcool"
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            android:autofillHints=""
+                            android:background="@android:color/transparent"
+                            android:ems="10"
+                            android:gravity="center"
+                            android:minHeight="48dp"
+                            android:padding="0dp"
+                            android:text="@string/teor_alcoolico"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <!-- Container for Preco -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/preco"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/grey"
+                    app:cardCornerRadius="36dp"
+                    app:cardElevation="0dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:orientation="vertical"
+                        android:padding="10dp">
+
+                        <TextView
+                            android:id="@+id/tv_preco"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="@string/preco"
+                            android:textColor="@color/preto_fosco"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:translationX="5dp" />
+
+                        <TextView
+                            android:id="@+id/tvPreco"
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            android:autofillHints=""
+                            android:background="@android:color/transparent"
+                            android:ems="10"
+                            android:gravity="center"
+                            android:padding="0dp"
+                            android:text="@string/precos"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/btn_tchim_tchim"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1.15"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:orientation="horizontal"
+                    app:cardBackgroundColor="@color/grey"
+                    app:cardCornerRadius="24dp"
+                    app:cardElevation="0dp">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="@string/teor_alcool"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:padding="16dp">
 
-                    <TextView
-                        android:id="@+id/tvTeorAlcool"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:autofillHints=""
-                        android:background="@android:color/transparent"
-                        android:ems="10"
-                        android:gravity="center"
-                        android:minHeight="48dp"
-                        android:padding="8dp"
-                        android:text="@string/teor_alcoolico"
-                        android:textSize="12sp" />
 
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_marginEnd="16dp"
+                            android:contentDescription="@string/tchim_tchim_icon"
+                            android:src="@drawable/tchim_tchim" />
 
-            <!-- Container for Preco -->
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_weight="1"
-                app:cardCornerRadius="36dp"
-                app:cardElevation="0dp"
-                app:cardBackgroundColor="@color/grey">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/tchim_tchim"
+                            android:textColor="@color/preto_fosco"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:orientation="vertical"
-                    android:padding="20dp">
+                </androidx.cardview.widget.CardView>
 
-                    <TextView
-                        android:id="@+id/tv_preco"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/btn_favoritos"
+                    android:onClick="heartContainer"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_weight="0.8"
+                    android:clickable="true"
+                    android:focusable="true"
+                    app:cardBackgroundColor="@color/grey"
+                    app:cardCornerRadius="16dp"
+                    app:cardElevation="0dp">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="@string/preco"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:padding="5dp">
 
-                    <TextView
-                        android:id="@+id/tvPreco"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:autofillHints=""
-                        android:background="@android:color/transparent"
-                        android:ems="10"
-                        android:gravity="center"
-                        android:padding="8dp"
-                        android:text="@string/precos"
-                        android:textSize="12sp" />
 
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+                        <ImageView
+                            android:id="@+id/heartImageView"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_marginEnd="16dp"
+                            android:contentDescription="@string/favoritos_icon"
+                            android:scaleX="0.6"
+                            android:scaleY="0.6"
+                            android:src="@drawable/heart_blank" />
 
-        </LinearLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/favoritar"
+                            android:textColor="@color/preto_fosco"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+
+            </LinearLayout>
 
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5" />
         </LinearLayout>
+
+        <!-- <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="2"
+            android:paddingLeft="16dp">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/btn_nota"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:clickable="true"
+                android:focusable="true"
+                app:cardBackgroundColor="@color/grey"
+                app:cardCornerRadius="24dp"
+                app:cardElevation="0dp">
+
+
+                <RatingBar
+                    android:id="@+id/ratingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleX="0.75"
+                    android:scaleY="0.75" />
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>-->
     </ScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
