--- a/LupsyApp/app/src/main/res/layout/fragment_perfil.xml
+++ b/LupsyApp/app/src/main/res/layout/fragment_perfil.xml
@@ -41,7 +41,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvEmail"
+                android:id="@+id/tvUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/email"
