botão carrinho + estrela(nota) pagina detalhes

--- a/LupsyApp/app/src/main/res/layout/activity_login.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_login.xml
@@ -40,6 +40,7 @@
         android:background="@drawable/editborder"
         android:ems="10"
         android:hint="@string/EtHUsername"
+        android:inputType="text"
         android:minHeight="48dp"
         android:paddingStart="10dp" />
 
