--- a/LupsyApp/app/src/main/res/layout/activity_cerveja_details.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_cerveja_details.xml
@@ -18,16 +18,19 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
             <TextView
                 android:id="@+id/tv_nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints=""
                 android:ems="10"
-                android:gravity="center"
                 android:hint="@string/nome"
                 android:inputType="text"
-                android:minHeight="48dp"
+                android:minHeight="28dp"
                 android:textAlignment="center"
                 android:textSize="25dp"
                 tools:ignore="VisualLintTextFieldSize" />
@@ -80,10 +83,12 @@
                     android:id="@+id/teor_alcool"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="8dp"
                     android:layout_weight="1"
                     app:cardBackgroundColor="@color/grey"
-                    app:cardCornerRadius="36dp"
+                    app:cardCornerRadius="24dp"
                     app:cardElevation="0dp">
 
                     <LinearLayout
@@ -124,10 +129,12 @@
                     android:id="@+id/preco"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="8dp"
                     android:layout_weight="1"
                     app:cardBackgroundColor="@color/grey"
-                    app:cardCornerRadius="36dp"
+                    app:cardCornerRadius="24dp"
                     app:cardElevation="0dp">
 
                     <LinearLayout
@@ -174,8 +181,7 @@
                     android:id="@+id/btn_tchim_tchim"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="16dp"
                     android:layout_weight="1.15"
                     android:clickable="true"
                     android:focusable="true"
@@ -212,15 +218,17 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/btn_favoritos"
-                    android:onClick="heartContainer"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="16dp"
                     android:layout_marginBottom="8dp"
                     android:layout_weight="0.8"
                     android:clickable="true"
                     android:focusable="true"
+                    android:onClick="heartContainer"
                     app:cardBackgroundColor="@color/grey"
                     app:cardCornerRadius="16dp"
                     app:cardElevation="0dp">
@@ -256,32 +264,98 @@
 
                 </androidx.cardview.widget.CardView>
 
-
             </LinearLayout>
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5" />
-        </LinearLayout>
-
-        <!-- <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:weightSum="2"
-            android:paddingLeft="16dp">
-
             <androidx.cardview.widget.CardView
-                android:id="@+id/btn_nota"
+                android:id="@+id/btn_carrinho"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="16dp"
-                android:clickable="true"
-                android:focusable="true"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="8dp"
                 app:cardBackgroundColor="@color/grey"
-                app:cardCornerRadius="24dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="0dp">
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <LinearLayout
+                        android:id="@+id/number_selector"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        >
+
+                        <Button
+                            android:id="@+id/btn_minus"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:backgroundTint="@color/transparente"
+                            android:outlineProvider="none"
+                            android:text="-"
+                            android:textColor="@color/black"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/tv_quantity"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_marginHorizontal="8dp"
+                            android:gravity="center"
+                            android:text="1"
+                            android:textSize="18sp"
+                            android:textColor="@color/black" />
+
+                        <Button
+                            android:id="@+id/btn_plus"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:outlineProvider="none"
+                            android:text="+"
+                            android:textSize="20sp"
+                            android:backgroundTint="@color/transparente"
+                            android:textColor="@color/black" />
+                    </LinearLayout>
+
+
+                    <ImageView
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:layout_width="40dp"
+                        android:onClick="carrinhoClicado"
+                        android:layout_height="40dp"
+                        android:layout_margin="8dp"
+                        android:contentDescription="@string/carrinho_icon"
+                        android:scaleX="0.8"
+                        android:scaleY="0.8"
+                        android:src="@drawable/ic_cart1"
+                        app:tint="@color/preto_fosco" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/nota_stars"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="8dp"
+                app:cardBackgroundColor="@color/grey"
+                app:cardCornerRadius="16dp"
                 app:cardElevation="0dp">
 
 
@@ -289,12 +363,27 @@
                     android:id="@+id/ratingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:scaleX="0.75"
-                    android:scaleY="0.75" />
+                    android:numStars="5"
+                    android:progressTint="#FFC107"
+                    android:scaleX="0.8"
+                    android:onClick="classificarCev"
+                    android:scaleY="0.8" />
+
+                <TextView
+                    android:layout_width="240dp"
+                    android:layout_height="60dp"
+                    android:gravity="bottom|center_horizontal"
+                    android:text="Avaliação" />
 
             </androidx.cardview.widget.CardView>
 
-        </LinearLayout>-->
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.7" />
+
+        </LinearLayout>
+
     </ScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
