--- a/LupsyApp/app/src/main/res/values/colors.xml
+++ b/LupsyApp/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="cadastro">#D4D4D4</color>
     <color name="branco_sujo">#E1E1E1</color>
     <color name="grey">#45D9D9D9</color>
+    <color name="transparente">#00C7C7C7</color>
 </resources>
