--- a/LupsyApp/app/src/main/res/layout/activity_cerveja_details.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_cerveja_details.xml
@@ -155,7 +155,7 @@
                             android:translationX="5dp" />
 
                         <TextView
-                            android:id="@+id/tvPreco"
+                            android:id="@+id/tvOutro"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
                             android:autofillHints=""
