--- a/LupsyApp/app/src/main/res/layout/fragment_perfil.xml
+++ b/LupsyApp/app/src/main/res/layout/fragment_perfil.xml
@@ -56,6 +56,12 @@
                 android:id="@+id/tvMorada"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+            <ImageButton
+                android:id="@+id/botaoLogout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_lock_power_off" />
         </LinearLayout>
     </LinearLayout>
 
