--- a/LupsyApp/app/src/main/res/layout/fragment_favoritos.xml
+++ b/LupsyApp/app/src/main/res/layout/fragment_favoritos.xml
@@ -71,6 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/fundo_amarelo_seco"
+            android:divider="@color/fundo_amarelo_seco"
             android:dividerHeight="5dp" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
