--- a/LupsyApp/app/src/main/res/layout/activity_cerveja_details_adm.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_cerveja_details_adm.xml
@@ -56,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/etPreco"
-                android:inputType="number" />
+                android:inputType="numberDecimal" />
 
             <View
                 android:id="@+id/Space"
