--- a/LupsyApp/app/src/main/res/layout/item_lista_cerveja_perfil.xml
+++ b/LupsyApp/app/src/main/res/layout/item_lista_cerveja_perfil.xml
@@ -69,13 +69,15 @@
                 android:id="@+id/tvOutro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvTeorAlcool"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:textStyle="bold" />
         </LinearLayout>
 
 
