--- a/LupsyApp/app/src/main/res/layout/activity_signup.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_signup.xml
@@ -45,6 +45,34 @@
         android:layout_weight="0.01" />
 
     <TextView
+        android:id="@+id/tvUsername"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:textColor="@color/preto_fosco"
+        android:text="@string/tvUsername" />
+
+    <EditText
+        android:id="@+id/etUsernameCad"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/editborder"
+        android:ems="10"
+        android:hint="@string/EtHUsername"
+        android:minHeight="48dp"
+        android:paddingStart="10dp"
+        android:inputType="text"
+        />
+
+    <View
+        android:id="@+id/vSpacing8"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.01" />
+
+    <TextView
         android:id="@+id/tvEmailCad"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
