--- a/LupsyApp/app/src/main/res/layout/fragment_carrinho.xml
+++ b/LupsyApp/app/src/main/res/layout/fragment_carrinho.xml
@@ -37,11 +37,14 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvSpacing"
+                android:id="@+id/tvTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/tvSpacing" />
+                android:padding="8dp"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/preto_fosco"
+                android:gravity="end"/>
         </LinearLayout>
 
         <!-- Linha separadora -->
@@ -69,7 +72,9 @@
         <ListView
             android:id="@+id/lv_carrinho"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:divider="@color/fundo_amarelo_seco"
+            android:dividerHeight="5dp"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
