--- a/LupsyApp/app/src/main/res/layout/fragment_favoritos.xml
+++ b/LupsyApp/app/src/main/res/layout/fragment_favoritos.xml
@@ -37,7 +37,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvSpacing"
+                android:id="@+id/tvTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
