--- a/LupsyApp/app/src/main/res/layout/item_lista_cerveja.xml
+++ b/LupsyApp/app/src/main/res/layout/item_lista_cerveja.xml
@@ -52,7 +52,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvDescCev"
+                android:id="@+id/tvQuantidade"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.7"
@@ -66,7 +66,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvOutro"
+                android:id="@+id/tvPrecoUnitario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
