--- a/LupsyApp/app/src/main/res/layout/activity_login.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,18 @@
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
+    <EditText
+        android:id="@+id/etIP"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/editborder"
+        android:ems="10"
+        android:hint="@string/ip_hint"
+        android:inputType="text"
+        android:minHeight="48dp"
+        android:paddingStart="10dp"/>
     <View
         android:id="@+id/vSpacing"
         android:layout_width="wrap_content"
