--- a/LupsyApp/app/src/main/res/layout/activity_cerveja_details.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_cerveja_details.xml
@@ -345,6 +345,13 @@
             </androidx.cardview.widget.CardView>
 
 
+            <TextView
+                android:id="@+id/tvNotaMedia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center|center_horizontal|center_vertical"
+                android:text="TextView" />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/nota_stars"
                 android:layout_width="wrap_content"
