--- a/LupsyApp/app/src/main/res/layout/fragment_perfil.xml
+++ b/LupsyApp/app/src/main/res/layout/fragment_perfil.xml
@@ -73,8 +73,8 @@
         android:id="@+id/imageView8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:tint="@color/amarelo_seco"
-        app:srcCompat="@drawable/ic_sepline" />
+        app:srcCompat="@drawable/ic_sepline"
+        app:tint="@color/amarelo_seco" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -101,8 +101,8 @@
         android:id="@+id/imageView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:tint="@color/amarelo_seco"
-        app:srcCompat="@drawable/ic_sepline" />
+        app:srcCompat="@drawable/ic_sepline"
+        app:tint="@color/amarelo_seco" />
 
     <LinearLayout
         android:layout_width="match_parent"
